--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -2,22 +2,23 @@
     display: flex;
     align-items: flex-end;
 }
- 
+
 .ul{
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0;
+    padding: 0;
 }
- 
+
 .li{
     display: flex;
     align-items: center;
     flex-direction: column;
     margin: 0;
 }
- 
+
 .link{
     font-size: 0.8rem;
     color: #1f1e31;
